--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -93,7 +93,9 @@ h1{
     border-radius: 50px;
     border: 4px solid rgba(114, 64, 114, 1);
   }
-
+  .mobile-nav{
+    display: none;
+  }
 main{
   text-align: center;
   color:white;
@@ -177,14 +179,13 @@ main{
 
 
 footer{
-  text-align: center;
   font-family: 'Bebas Neue', cursive;
   color: white;
   display: flex;
   flex-direction: column;
   font-size: 20px;
   padding:20px;
-
+  width: 100%;
 }
 
 footer a{
@@ -194,4 +195,50 @@ footer a{
 
 footer a:hover{
   color:red;
+}
+
+footer p{
+  color: black;
+}
+
+
+/* Mobile Styles */
+@media only screen and (max-width:1200px) {
+nav{
+  display: none;
+}
+.mobile-nav{
+  display: block;
+  text-align: center;
+}
+
+.logo-page{
+  font-size: 25px;
+}
+.mobile-link{
+padding:20px;
+text-decoration: none;
+color:white;
+display:block;
+}
+
+.page-link{
+display: flex;
+justify-content: center;
+}
+
+.mobile-link.bio{
+  background: linear-gradient(35deg,rgba(153, 99, 47, 1), rgba(205, 133, 63, 1),rgba(230, 194, 160, 1) );
+  border-radius: 0px 0px 0px 30px;
+}
+
+.mobile-link.portfolio{
+  background: linear-gradient(35deg,rgba(114, 64, 114, 1), rgba(152, 86, 152, 1),rgba(204, 171, 204, 1) );
+}
+
+.mobile-link.contacts{
+  background: linear-gradient(   35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) );
+  border-radius: 0px 0px 30px 0px;
+}
+
 }
