--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
   margin:0;
   box-sizing: border-box;
 }
+
+
+
+
+
 main{
   background: linear-gradient(90deg,rgba(205, 133, 63, 0.9), rgba(152, 86, 152, 1),rgba(34, 113, 179, 0.9) ), url('../img/clarinet-header.jpg');
   background-size: cover;
@@ -61,14 +66,12 @@ main{
   padding: 15px;
   width: 100px;
   margin: auto;
-
 }
-/* box biografia */
-.box-one{
+
+.box{
   height: 300px;
   width: 300px;
   border: 5px solid white;
-  background-color:  #CD853F;
   color: white;
   border-radius: 20px;
   margin: 30px;
@@ -77,7 +80,10 @@ main{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
+}
+/* box biografia */
+.box.one{
+  background-color:  #CD853F;
 }
 .box-link.one:hover{
   background-color: #CD853F;
@@ -86,19 +92,8 @@ main{
 }
 
 /* box portfolio */
-.box-two{
-  height: 300px;
-  width: 300px;
-  border: 5px solid white;
+.box.two{
   background-color:  #985698;
-  color: white;
-  border-radius: 20px;
-  margin: 30px;
-  padding-top: 50px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
 }
 
 .box-link.two:hover{
@@ -108,19 +103,8 @@ main{
 }
 
 /* box contatti */
-.box-three{
-  height: 300px;
-  width: 300px;
-  border: 5px solid white;
+.box.three{
   background-color: #2271B3;
-  color: white;
-  border-radius: 20px;
-  margin: 30px;
-  padding-top: 50px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
 }
 
 .box-link.three:hover{
@@ -132,18 +116,34 @@ main{
 
 /* Mobile Styles */
 @media only screen and (max-width:600px) {
+  #title-section{
+    text-align: center;
+    padding: 400px 0px;
+    font-size: 30px;
+  }
+  #scroll-adv{
+    color:white;
+    margin-bottom: 100px;
+  }
+
   #main-content{
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
   #title-section{
     text-align: center;
     padding: 100px 0px;
-;
   }
+
   #scroll-adv{
     color:white;
     margin: 0px 0px 50px 0px;
+  }
+
+  .box-one,
+  .box-two,{
+
   }
 }
