--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -204,8 +204,18 @@ footer p{
 
 /* Mobile Styles */
 @media only screen and (max-width:1200px) {
+
 nav{
   display: none;
+}
+
+/* page-link size */
+div a{
+  font-size: 60px;
+  font-family: 'Zen Kurenaido', sans-serif;
+}
+#profile-photo{
+  height:100px;
 }
 .mobile-nav{
   display: block;
@@ -213,8 +223,14 @@ nav{
 }
 
 .logo-page{
-  font-size: 25px;
+  display: flex;
+  justify-content: center;
 }
+
+.logo-page a{
+  font-size: 85px;
+}
+
 .mobile-link{
 padding:20px;
 text-decoration: none;
@@ -242,9 +258,28 @@ justify-content: center;
 }
 
 .box-work{
+  margin: 80px 0px;
   width: 100%;
-  height: 100%;
+  height: 500px;
 }
 
+#works-section h1 ,
+#exercises-section h1{
+font-size: 80px;
 
+}
+#works-section ,
+#exercises-section {
+font-size: 50px;
+
+}
+
+.box-explanation p{
+  display: none;
+}
+
+footer a,
+footer p{
+  font-size: 50px;
+}
 }
