--- a/contacts/style.css
+++ b/contacts/style.css
@@ -15,9 +15,11 @@ nav{
   padding-top: 5px;
 
 }
+
 h1{
   font-family: 'Bebas Neue', cursive;
 }
+
 #home-link{
   color:white;
   text-decoration:none;
@@ -26,6 +28,7 @@ h1{
   padding: 10px 10px 0px 10px;
   background: linear-gradient(35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) )
 }
+
 .logo-page{
   color:white;
   font-size: 30px;
@@ -56,11 +59,13 @@ h1{
   height: 50px;
 }
 
-.nav-link.portfolio{
+.nav-link.portfolio,
+.mobile-link.portfolio{
   background:linear-gradient(35deg,rgba(114, 64, 114, 1), rgba(152, 86, 152, 1),rgba(204, 171, 204, 1) );
 }
 
-.nav-link.bio{
+.nav-link.bio,
+.mobile-link.bio{
   background: linear-gradient(35deg,rgba(153, 99, 47, 1), rgba(205, 133, 63, 1),rgba(230, 194, 160, 1) );
 }
 
@@ -77,13 +82,17 @@ h1{
  0%{
     height: 0px;
  }
+
   100% {
     height: 50px;
   }
+
 }
+
 .mobile-nav{
   display: none;
 }
+
 main{
   width: 80%;
   margin: auto;
@@ -105,8 +114,9 @@ main{
   padding: 20px;
   margin: 50px 0px;
   width: auto;
-
 }
+
+/* social icon */
 .fa {
   padding: 20px;
   margin:20px;
@@ -116,26 +126,32 @@ main{
   border-radius: 50%;
   border:2px solid white;
 }
+
 .fa:active{
   opacity: 0.4;
 }
+
 .fa-facebook {
   background: #3B5998;
   color: white;
   padding: 20px 23px ;
 }
+
 .fa-twitter {
   background: #55ACEE;
   color: white;
 }
+
 .fa-linkedin {
   background: #007bb5;
   color: white;
 }
+
 .fa-instagram {
   background: #125688;
   color: white;
 }
+
 .social{
   padding:10px;
 }
@@ -149,7 +165,7 @@ main{
 .form-section{
   padding: 20px;
 }
-
+/* bottone form */
 button{
   color:white;
   background: linear-gradient(   35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) );
@@ -157,9 +173,11 @@ button{
   border:2px solid white;
   border-radius: 10px;
 }
+
 button:hover{
   cursor: pointer;
 }
+
 button:active{
   opacity: 0.5;
 }
@@ -178,14 +196,16 @@ label{
   font-size: 20px;
   color:white;
 }
+
 .form-section input[type='text']:invalid,
 .form-section input[type='email']:invalid{
   border: 2px solid red;
   color: #D55C5F;
   box-shadow: none; /* Remove default red glow in Firefox */
 }
+
 footer{
-  font-family: 'Bebas Neue', cursive;
+  font-family:'Bebas Neue', cursive;
   color: white;
   display: flex;
   flex-direction: column;
@@ -202,9 +222,11 @@ footer a{
 footer a:hover{
   color:red;
 }
+
 footer p{
   color: black;
 }
+
 /* Mobile Styles */
 @media only screen and (max-width:1200px) {
 nav{
@@ -233,6 +255,7 @@ div a{
 .logo-page a{
   font-size: 85px;
 }
+
 .mobile-link{
 padding:20px;
 text-decoration: none;
@@ -246,24 +269,22 @@ justify-content: center;
 }
 
 .mobile-link.bio{
-  background: linear-gradient(35deg,rgba(153, 99, 47, 1), rgba(205, 133, 63, 1),rgba(230, 194, 160, 1) );
   border-radius: 0px 0px 0px 30px;
 }
 
-.mobile-link.portfolio{
-  background: linear-gradient(35deg,rgba(114, 64, 114, 1), rgba(152, 86, 152, 1),rgba(204, 171, 204, 1) );
-}
-
 .mobile-link.contacts{
-  background: linear-gradient(   35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) );
+  background: linear-gradient(35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) );
   border-radius: 0px 0px 30px 0px;
 }
+
 h1{
   font-size: 100px;
 }
+
 section{
   font-size: 50px;
 }
+
 .fa {
   padding: 40px;
   margin:20px;
@@ -276,6 +297,7 @@ section{
 .fa-facebook {
   padding: 40px 50px ;
 }
+
 textarea{
   width: 100%;
 }
@@ -286,6 +308,7 @@ textarea,
 button{
   font-size: 45px;
 }
+
 footer a,
 footer p{
   font-size: 50px;
