--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -16,9 +16,9 @@
     padding-top: 5px;
   }
 
-h1{
-  font-family: 'Bebas Neue', cursive;
-}
+  h1{
+    font-family: 'Bebas Neue', cursive;
+  }
   #home-link{
     color:white;
     text-decoration:none;
@@ -33,7 +33,6 @@ h1{
     font-size: 30px;
     background-color: white;
   }
-
 
   .page-link{
     display: flex;
@@ -53,9 +52,9 @@ h1{
     height: 0px;
   }
 
-  .nav-link.bio{
+  .nav-link.bio,
+  .mobile-link.bio{
     background: linear-gradient(35deg,rgba(153, 99, 47, 1), rgba(205, 133, 63, 1),rgba(230, 194, 160, 1) );
-
   }
 
   .nav-link.portfolio{
@@ -66,7 +65,8 @@ h1{
 
   }
 
-  .nav-link.contacts{
+  .nav-link.contacts,
+  .mobile-link.contacts{
     background: linear-gradient(   35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) )
   }
 
@@ -104,6 +104,15 @@ main{
   align-items: center;
 }
 
+#works-section{
+  margin: 50px 0px;
+}
+
+#exercises-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 #works-section ,
 #exercises-section {
@@ -111,45 +120,39 @@ main{
   border-radius: 10px;
   padding: 50px;
   width:90%;
-
 }
-  #works-section h1,
-  #exercises-section h1{
-    font-size: 30px;
-  }
-  #works-section{
-    margin: 50px 0px;
-  }
 
-  #exercises-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-    #exercises-section a{
-      text-decoration: none;
-    }
- /* presentazione esercitazioni */
-  .box-work{
-    width:50vw;
-    height: 50vh;
-    border: 1px solid black;
-    margin: 30px 0px;
-    border: 4px solid rgba(114, 64, 114, 1);
-    border-radius: 10px;
-  }
+#works-section h1,
+#exercises-section h1{
+  font-size: 30px;
+}
 
-  .box-explanation{
-    visibility: hidden;
-    padding: 50px;
-    color: white;
-    border-radius: 5px 5px 0px 0px;
-    font-size: 20px;
+
+
+#exercises-section a{
+  text-decoration: none;
+}
+
+ /* box esercitazioni */
+.box-work{
+  width:50vw;
+  height: 50vh;
+  border: 1px solid black;
+  margin: 30px 0px;
+  border: 4px solid rgba(114, 64, 114, 1);
+  border-radius: 10px;
   }
+/* box spiegazioni esercitazioni */
+.box-explanation{
+  visibility: hidden;
+  padding: 50px;
+  color: white;
+  border-radius: 5px 5px 0px 0px;
+  font-size: 20px;
+}
 
 .box-work:hover > .box-explanation{
     visibility: visible;
-    /* background: linear-gradient(35deg,rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)); */
     background: linear-gradient(35deg,rgba(114, 64, 114, 0.9), rgba(152, 86, 152, 0.9),rgba(204, 171, 204, 0.9) );
   }
 
@@ -164,19 +167,18 @@ main{
   background:url("../assets/img/Cattura.JPG");
   background-size: cover;
 }
+
 /* landing page background */
 .box-work.three{
   background:url("../assets/img/Cattura3.JPG");
   background-size: cover;
 }
+
 /* portfolio background */
 .box-work.four{
   background:url("../assets/img/Cattura2.JPG");
   background-size: cover;
 }
-
-
-
 
 footer{
   font-family: 'Bebas Neue', cursive;
@@ -214,9 +216,11 @@ div a{
   font-size: 60px;
   font-family: 'Zen Kurenaido', sans-serif;
 }
+
 #profile-photo{
   height:100px;
 }
+
 .mobile-nav{
   display: block;
   text-align: center;
@@ -244,7 +248,6 @@ justify-content: center;
 }
 
 .mobile-link.bio{
-  background: linear-gradient(35deg,rgba(153, 99, 47, 1), rgba(205, 133, 63, 1),rgba(230, 194, 160, 1) );
   border-radius: 0px 0px 0px 30px;
 }
 
@@ -253,7 +256,6 @@ justify-content: center;
 }
 
 .mobile-link.contacts{
-  background: linear-gradient(   35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) );
   border-radius: 0px 0px 30px 0px;
 }
 
