--- a/contacts/style.css
+++ b/contacts/style.css
@@ -277,6 +277,13 @@ justify-content: center;
   border-radius: 0px 0px 30px 0px;
 }
 
+.mobile-link.bio:active,
+.mobile-link.portfolio:active,
+.mobile-link.contacts:active{
+  opacity: 0,4;
+  color: black;
+}
+
 h1{
   font-size: 100px;
 }
