--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -259,6 +259,13 @@ justify-content: center;
   border-radius: 0px 0px 30px 0px;
 }
 
+.mobile-link.bio:active,
+.mobile-link.portfolio:active,
+.mobile-link.contacts:active{
+  opacity: 0,4;
+  color: black;
+}
+
 .box-work{
   margin: 80px 0px;
   width: 100%;
