--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -106,6 +106,9 @@ main{
 
 #works-section{
   margin: 50px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #exercises-section{
@@ -127,9 +130,8 @@ main{
   font-size: 30px;
 }
 
-
-
-#exercises-section a{
+#exercises-section a,
+#works-section a{
   text-decoration: none;
 }
 
@@ -180,6 +182,11 @@ main{
   background-size: cover;
 }
 
+/* arcad games background */
+.box-work.five{
+  background:url("../assets/img/cosmic.png");
+  background-size: contain;
+}
 footer{
   font-family: 'Bebas Neue', cursive;
   color: white;
